# ConnectFour

./: CMakeLists.txt  README.md  cmake.sh  main.sh  test.sh
src/: Makefile  main.c
src/board/: CMakeLists.txt  Makefile  board.c  board.h  utest-board.c  utest-board.h
src/gameMaster/: CMakeLists.txt  gameMaster.c  gameMaster.h  utest-gameMaster.c  utest-gameMaster.h
src/gamemaster/: Makefile  gameMaster.c  gameMaster.h
src/handlers/: CMakeLists.txt
src/handlers/computerHandler/: CMakeLists.txt  computerHandler.c  computerHandler.h  utest-computerHandler.c  utest-computerHandler.h
src/handlers/gameLogicHandler/: CMakeLists.txt  gameLogicHandler.c  gameLogicHandler.h  utest-gameLogicHandler.c  utest-gameLogicHandler.h
src/handlers/inputHandler/: CMakeLists.txt  Makefile  inputHandler.c  inputHandler.h  utest-inputHandler.c  utest-inputHandler.h
src/handlers/modeHandler/: CMakeLists.txt  Makefile  colors.h  modeHandler.c  modeHandler.h  utest-modeHandler.c  utest-modeHandler.h
src/handlers/otherHeaders/: colors.h  debug.h
src/handlers/outputHandler/: CMakeLists.txt  outputHandler.c  outputHandler.h
src/hello/: Makefile  main.c
src/main/: CMakeLists.txt  main.c  utest-board.h  utest.c
