add_library(modeHandler modeHandler.c utest-modeHandler.c utest-modeHandler.h ../otherHeaders/colors.h ../gameLogicHandler/gameLogicHandler.c ../gameLogicHandler/gameLogicHandler.h ../computerHandler/computerHandler.c ../computerHandler/computerHandler.h ../otherHeaders/debug.h)
target_include_directories(modeHandler PUBLIC .)